fix(form): make button that adds new form elements stretch through the entire width

--- a/src/components/form/form.scss
+++ b/src/components/form/form.scss
@@ -136,3 +136,8 @@
     padding-left: 1rem;
     padding-top: 0.25rem;
 }
+
+.button-add-new {
+    margin-top: 0.5rem;
+    width: 100%;
+}
